2.0/gateway/gateway-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: svc-gateway
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: api.baidu.com
    http:
      paths:
      - path:
        backend:
          serviceName: svc-gateway
          servicePort: 8000
